# files_word_count

./: .gitignore  CMakeLists.txt  README.md  a.out  main.cpp  monitor.d  monitor.sh  pids.txt  s.out  single_process.txt  single_thread.cpp  word_count
.cache/clangd/index/: client.cpp.98B1F458AA5C48F0.idx  config.h.D70ED8EBB844D39B.idx  main.cpp.4CE46D7A7B24B764.idx  server.cpp.BAB3AA7F2815CB4D.idx
data/essay/: e1.txt  e2.txt
directory_big/essay/: e1.txt  e2.txt  e3.txt  e4.txt  e5.txt
include/: config.h  config.h.in
output/: word_counts.txt
src/: client.cpp  main.cpp  server.cpp  single_thread.cpp
